feat:로그인 상태 구현, 상세페이지 라우팅 구현, db 경로 수정

--- a/src/App.css
+++ b/src/App.css
@@ -242,3 +242,17 @@
 .badge-new {
   background: dodgerblue;
 }
+
+.page .container,
+main .container {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+@media (max-width: 768px) {
+  .page .container,
+  main .container {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
